@@ -17,6 +17,8 @@
 package org.jkiss.dbeaver.model.sql.semantics.completion;
 
 import org.antlr.v4.runtime.misc.Interval;
+import org.eclipse.jface.text.BadLocationException;
+import org.eclipse.jface.text.IDocument;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
@@ -31,6 +33,7 @@ import org.jkiss.dbeaver.model.sql.SQLSearchUtils;
 import org.jkiss.dbeaver.model.sql.completion.SQLCompletionRequest;
 import org.jkiss.dbeaver.model.sql.semantics.*;
 import org.jkiss.dbeaver.model.sql.semantics.context.SQLQueryDataContext;
+import org.jkiss.dbeaver.model.sql.semantics.context.SQLQueryResultColumn;
 import org.jkiss.dbeaver.model.sql.semantics.context.SourceResolutionResult;
 import org.jkiss.dbeaver.model.stm.LSMInspections;
 import org.jkiss.dbeaver.model.stm.STMTreeTermNode;
@@ -39,10 +42,13 @@ import org.jkiss.dbeaver.model.struct.rdb.DBSCatalog;
 import org.jkiss.dbeaver.model.struct.rdb.DBSSchema;
 import org.jkiss.dbeaver.model.struct.rdb.DBSTable;
 import org.jkiss.dbeaver.model.struct.rdb.DBSView;
-import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.Pair;
 
 import java.util.*;
-import java.util.function.Function;
+import java.util.function.BiFunction;
+import java.util.function.Predicate;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -51,8 +57,13 @@ public abstract class SQLQueryCompletionContext {
     private static final Log log = Log.getLog(SQLQueryCompletionContext.class);
 
     private static final Set<String> statementStartKeywords = LSMInspections.prepareOffquerySyntaxInspection().predictedWords;
-    private static final Collection<SQLQueryCompletionItem> statementStartKeywordCompletions = statementStartKeywords.stream().sorted().map(SQLQueryCompletionItem::forReservedWord).toList();
     private static final int statementStartKeywordMaxLength = statementStartKeywords.stream().mapToInt(String::length).max().orElse(0);
+
+    private static final Set<SQLQuerySymbolClass> potentialKeywordPartClassification = Set.of(
+        SQLQuerySymbolClass.UNKNOWN,
+        SQLQuerySymbolClass.ERROR,
+        SQLQuerySymbolClass.RESERVED
+    );
 
     /**
      * Returns maximum length of all keywords
@@ -64,39 +75,40 @@ public abstract class SQLQueryCompletionContext {
     /**
      * Empty completion context which always provides no completion items
      */
-    public static final SQLQueryCompletionContext EMPTY = new SQLQueryCompletionContext(0) {
+    public static SQLQueryCompletionContext prepareEmpty(int scriptItemOffset, int requestOffset) {
+        return new SQLQueryCompletionContext(0, requestOffset) {
 
-        @Nullable
-        @Override
-        public SQLQueryDataContext getDataContext() {
-            return null;
-        }
+            @Nullable
+            @Override
+            public SQLQueryDataContext getDataContext() {
+                return null;
+            }
 
-        @NotNull
-        @Override
-        public LSMInspections.SyntaxInspectionResult getInspectionResult() {
-            return LSMInspections.SyntaxInspectionResult.EMPTY;
-        }
+            @NotNull
+            @Override
+            public LSMInspections.SyntaxInspectionResult getInspectionResult() {
+                return LSMInspections.SyntaxInspectionResult.EMPTY;
+            }
 
-        @NotNull
-        @Override
-        public SQLQueryCompletionSet prepareProposal(
-            @NotNull DBRProgressMonitor monitor,
-            int position,
-            @NotNull SQLCompletionRequest request
-        ) {
-            return new SQLQueryCompletionSet(position, 0, Collections.emptyList());
-        }
-    };
+            @NotNull
+            @Override
+            public SQLQueryCompletionSet prepareProposal(
+                @NotNull DBRProgressMonitor monitor,
+                @NotNull SQLCompletionRequest request
+            ) {
+                return new SQLQueryCompletionSet(getRequestOffset(), 0, Collections.emptyList());
+            }
+        };
+    }
 
     /**
      * Prepare completion context for the script item at given offset treating current position as outside-of-query
      */
     @NotNull
-    public static SQLQueryCompletionContext prepareOffquery(int scriptItemOffset) {
-        return new SQLQueryCompletionContext(scriptItemOffset) {
+    public static SQLQueryCompletionContext prepareOffquery(int scriptItemOffset, int requestOffset) {
+        return new SQLQueryCompletionContext(scriptItemOffset, requestOffset) {
             private static final LSMInspections.SyntaxInspectionResult syntaxInspectionResult = LSMInspections.prepareOffquerySyntaxInspection();
-
+            private static Pattern KEYWORD_FILTER_PATTERN = Pattern.compile("[a-zA-Z0-9]+$");
 
             @Nullable
             @Override
@@ -114,22 +126,57 @@ public abstract class SQLQueryCompletionContext {
             @Override
             public SQLQueryCompletionSet prepareProposal(
                 @NotNull DBRProgressMonitor monitor,
-                int position,
                 @NotNull SQLCompletionRequest request
             ) {
-                return new SQLQueryCompletionSet(position, 0, statementStartKeywordCompletions);
+                int lineStartOffset;
+                String lineHead;
+                try {
+                    IDocument doc = request.getDocument();
+                    int line = doc.getLineOfOffset(this.getRequestOffset());
+                    lineStartOffset = doc.getLineOffset(line);
+                    lineHead = doc.get(lineStartOffset, this.getRequestOffset() - lineStartOffset);
+                } catch (BadLocationException ex) {
+                    lineHead = "";
+                    lineStartOffset = -1;
+                }
+
+                Matcher m = KEYWORD_FILTER_PATTERN.matcher(lineHead);
+                Collection<SQLQueryCompletionItem> keywordCompletions;
+                int replacementLength;
+                if (m.find()) {
+                    String filterKeyString = lineHead.substring(m.start(), m.end()).toLowerCase();
+                    int filterStart = m.start() + lineStartOffset;
+                    replacementLength = filterKeyString.length();
+                    keywordCompletions = statementStartKeywords.stream()
+                        .map(s -> SQLQueryCompletionItem.forReservedWord(new SQLQueryWordEntry(filterStart, s), s))
+                        .filter(c -> c.getFilterInfo().filterString.contains(filterKeyString))
+                        .toList();
+                } else {
+                    replacementLength = 0;
+                    keywordCompletions = statementStartKeywords.stream()
+                        .map(s -> SQLQueryCompletionItem.forReservedWord(new SQLQueryWordEntry(-1, s), s))
+                        .toList();
+                }
+
+                return new SQLQueryCompletionSet(this.getRequestOffset() - replacementLength, replacementLength, keywordCompletions);
             }
         };
     }
 
     private final int scriptItemOffset;
+    private final int requestOffset;
 
-    private SQLQueryCompletionContext(int scriptItemOffset) {
+    private SQLQueryCompletionContext(int scriptItemOffset, int requestOffset) {
         this.scriptItemOffset = scriptItemOffset;
+        this.requestOffset = requestOffset;
     }
 
     public int getOffset() {
         return this.scriptItemOffset;
+    }
+
+    public int getRequestOffset() {
+        return this.requestOffset;
     }
 
     @Nullable
@@ -151,28 +198,39 @@ public abstract class SQLQueryCompletionContext {
         return Collections.emptySet();
     }
 
+    @NotNull
+    public List<SQLQueryCompletionItem> prepareCurrentTupleColumns() {
+        return Collections.emptyList();
+    }
+
     /**
      * Prepare a set of completion proposal items for a given position in the text of the script item
      */
     @NotNull
     public abstract SQLQueryCompletionSet prepareProposal(
         @NotNull DBRProgressMonitor monitor,
-        int position,
         @NotNull SQLCompletionRequest request
     );
+
+    @NotNull
+    protected SQLQueryWordEntry makeFilterInfo(@Nullable SQLQueryWordEntry filterKey, @NotNull String filterString) {
+        return new SQLQueryWordEntry(filterKey == null ? -1 : (this.getOffset() + filterKey.offset), filterString);
+    }
 
     /**
      * Prepare completion context for the script item in the given contexts (execution, syntax and semantics)
      */
     public static SQLQueryCompletionContext prepare(
         @NotNull SQLScriptItemAtOffset scriptItem,
+        int requestOffset,
         @Nullable DBCExecutionContext dbcExecutionContext,
         @NotNull LSMInspections.SyntaxInspectionResult syntaxInspectionResult,
         @NotNull SQLQueryDataContext context,
         @Nullable SQLQueryLexicalScopeItem lexicalItem,
-        @NotNull STMTreeTermNode[] nameNodes
+        @NotNull STMTreeTermNode[] nameNodes,
+        boolean hasPeriod
     ) {
-        return new SQLQueryCompletionContext(scriptItem.offset) {
+        return new SQLQueryCompletionContext(scriptItem.offset, requestOffset) {
             private final Set<DBSObjectContainer> exposedContexts = SQLQueryCompletionContext.obtainExposedContexts(dbcExecutionContext);
             private final SQLQueryDataContext.KnownSourcesInfo knownSources = context.collectKnownSources();
 
@@ -204,81 +262,78 @@ public abstract class SQLQueryCompletionContext {
             @Override
             public SQLQueryCompletionSet prepareProposal(
                 @NotNull DBRProgressMonitor monitor,
-                int position,
                 @NotNull SQLCompletionRequest request
             ) {
-                position -= this.getOffset();
+                int position = this.getRequestOffset() - this.getOffset();
                 
-                String currentWord = this.obtainCurrentWord(position);
-                
-                final List<SQLQueryCompletionItem> keywordCompletions = nameNodes.length > 1 // TODO consider separator after prefix
-                        ? Collections.emptyList()
-                        : prepareKeywordCompletions(syntaxInspectionResult.predictedWords, currentWord);
+                SQLQueryWordEntry currentWord = this.obtainCurrentWord(position);
+                List<SQLQueryWordEntry> parts = this.obtainIdentifierParts(position);
+
+                boolean keywordsAllowed = (lexicalItem == null || potentialKeywordPartClassification.contains(lexicalItem.getSymbolClass())) && !hasPeriod;
+                final List<SQLQueryCompletionItem> keywordCompletions = keywordsAllowed
+                    ? prepareKeywordCompletions(syntaxInspectionResult.predictedWords, currentWord)
+                    : Collections.emptyList();
 
                 List<SQLQueryCompletionItem> columnRefCompletions = syntaxInspectionResult.expectingColumnReference && nameNodes.length == 0
                     ? this.prepareColumnCompletions(null)
                     : Collections.emptyList();
 
                 List<SQLQueryCompletionItem> tableRefCompletions = syntaxInspectionResult.expectingTableReference && nameNodes.length == 0
-                    ? this.prepareTableCompletions(monitor, request)
+                    ? this.prepareTableCompletions(monitor, request, null)
                     : Collections.emptyList();
                 
                 List<SQLQueryCompletionItem> lexicalItemCompletions = lexicalItem != null
                     ? this.prepareLexicalItemCompletions(monitor, request, lexicalItem, position)
-                    : syntaxInspectionResult.expectingIdentifier || nameNodes.length > 0
-                        ? this.prepareIdentifierCompletions(monitor, request, position)
+                    : syntaxInspectionResult.expectingIdentifier || nameNodes.length > 0 && (parts.size() > 1 || (parts.size() == 1 && parts.get(0) != null))
+                        ? this.prepareInspectedIdentifierCompletions(monitor, request, parts)
                         : Collections.emptyList();
                 
                 List<SQLQueryCompletionItem> completionItems = Stream.of(
                     columnRefCompletions, tableRefCompletions, lexicalItemCompletions, keywordCompletions)
                     .flatMap(Collection::stream)
                     .collect(Collectors.toList());
-                
-                int replacementLength = currentWord == null ? 0 : currentWord.length();
-                return new SQLQueryCompletionSet(position - replacementLength, replacementLength, completionItems);
+
+                int replacementPosition = !keywordsAllowed && (parts.size() > 0 && parts.get(0) != null) ? parts.get(0).offset : position;
+                return new SQLQueryCompletionSet(this.getOffset() + replacementPosition, position - replacementPosition, completionItems);
             }
 
             @Nullable
-            private String obtainCurrentWord(int position) {
+            private SQLQueryWordEntry obtainCurrentWord(int position) {
                 if (nameNodes.length == 0) {
                     return null;
                 }
                 STMTreeTermNode lastNode = nameNodes[nameNodes.length - 1];
                 Interval wordRange = lastNode.getRealInterval();
                 if (wordRange.b >= position - 1 && lastNode.symbol.getType() != SQLStandardLexer.Period) {
-                    return lastNode.getTextContent().substring(0, position - lastNode.getRealInterval().a);
+                    return new SQLQueryWordEntry(wordRange.a, lastNode.getTextContent().substring(0, position - lastNode.getRealInterval().a));
                 } else {
                     return null;
                 }
             }
-
-            @NotNull
-            private List<SQLQueryCompletionItem> prepareIdentifierCompletions(
-                @NotNull DBRProgressMonitor monitor,
-                @NotNull SQLCompletionRequest request,
-                int position
-            ) {
-                List<String> parts = this.obtainIdentifierParts(position);
-                return this.prepareIdentifierCompletions(monitor, request, parts, null);
-            }
             
-            private List<SQLQueryCompletionItem> prepareIdentifierCompletions(
+            private List<SQLQueryCompletionItem> prepareInspectedIdentifierCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
-                @NotNull List<String> parts, Class<?> componentType
+                @NotNull List<SQLQueryWordEntry> parts
             ) {
-                List<String> prefix = parts.subList(0, parts.size() - 1);
-                String tail = parts.get(parts.size() - 1);
+                List<SQLQueryWordEntry> prefix = parts.subList(0, parts.size() - 1);
+                SQLQueryWordEntry tail = parts.get(parts.size() - 1);
+                if (tail != null) {
+                    String[][] quoteStrs = request.getContext().getDataSource().getSQLDialect().getIdentifierQuoteStrings();
+                    if (quoteStrs.length > 0) {
+                        // The "word" being accomplished may be a quoted or a beginning of the quoted identifier,
+                        // so we should remove potential quotes.
+                        // TODO Consider identifiers containing escape-sequences
+                        String qp = Stream.of(quoteStrs).flatMap(ss -> Stream.of(ss)).map(Pattern::quote).distinct().collect(Collectors.joining("|"));
+                        tail = new SQLQueryWordEntry(tail.offset, tail.string.replaceAll(qp, ""));
+                    }
+                }
 
                 List<SQLQueryCompletionItem> result;
-                if (!CommonUtils.isEmpty(tail)) {
-                    if (syntaxInspectionResult.expectingColumnReference) {
-                        result = this.accomplishColumnReference(prefix, tail);
-                    } else if (syntaxInspectionResult.expectingTableReference) {
-                        result = this.accomplishTableReference(monitor, request, componentType, prefix, tail);
-                    } else {
-                        result = Collections.emptyList();
-                    }
+                if (syntaxInspectionResult.expectingColumnReference) {
+                    result = this.accomplishColumnReference(monitor, prefix, tail);
+                } else if (syntaxInspectionResult.expectingTableReference) {
+                    result = this.accomplishTableReference(monitor, request, prefix, tail);
                 } else {
                     result = Collections.emptyList();
                 }
@@ -290,43 +345,98 @@ public abstract class SQLQueryCompletionContext {
             private List<SQLQueryCompletionItem> accomplishTableReference(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
-                @NotNull Class<?> componentType,
-                @NotNull List<String> prefix,
-                @NotNull String tail
+                @NotNull List<SQLQueryWordEntry> prefix,
+                @Nullable SQLQueryWordEntry tail
             ) {
                 if (dbcExecutionContext == null || dbcExecutionContext.getDataSource() == null || !DBStructUtils.isConnectedContainer(dbcExecutionContext.getDataSource())) {
                     return Collections.emptyList();
+                } else if (prefix.isEmpty()) {
+                    return this.prepareTableCompletions(monitor, request, tail);
                 } else {
-                    DBSObject prefixContext = prefix.size() == 0
+                    List<String> contextName = prefix.stream().map(e -> e.string).collect(Collectors.toList());
+                    DBSObject prefixContext = prefix.isEmpty()
                         ? DBUtils.getSelectedObject(dbcExecutionContext)
                         : SQLSearchUtils.findObjectByFQN(
                             monitor,
                             (DBSObjectContainer) dbcExecutionContext.getDataSource(),
                             dbcExecutionContext,
-                            prefix,
+                            contextName,
                             false,
                             request.getWordDetector()
                         );
-                    return prefixContext == null
-                        ? Collections.emptyList()
-                        : this.prepareObjectComponentCompletions(monitor, prefixContext, tail, componentType,
-                            x -> SQLQueryCompletionItem.forRealTable((DBSEntity) x, knownSources.getReferencedTables().contains(x)));
+
+//                        List<SQLQueryCompletionItem> items = this.prepareObjectComponentCompletions(
+//                            monitor, prefixContext, tail, List.of(DBSTable.class, DBSView.class),
+//                            (e, x) -> SQLQueryCompletionItem.forRealTable(e, x, knownSources.getReferencedTables().contains(x))
+//                        );
+
+                    LinkedList<SQLQueryCompletionItem> items = new LinkedList<>();
+                    if (prefixContext instanceof DBSObjectContainer container) {
+                        try {
+                            this.collectTables(monitor, container, tail, items);
+                            this.collectContextSchemasAndCatalogs(List.of(container), monitor, tail, items);
+                        } catch (DBException e) {
+                            log.error(e);
+                        }
+                    }
+                    return items;
                 }
             }
 
             @NotNull
-            private List<SQLQueryCompletionItem> accomplishColumnReference(@NotNull List<String> prefix, @NotNull String tail) {
-                if (prefix.size() == 1) { // table-ref-prefixed column
-                    String mayBeAliasName = prefix.get(0).toLowerCase();
-                    SourceResolutionResult srr = this.knownSources.getResolutionResults().values().stream()
-                        .filter(rr -> rr.aliasOrNull != null && rr.aliasOrNull.getName().toLowerCase().contains(mayBeAliasName))
-                        .findFirst().orElse(null);
-                    if (srr != null) { // alias resolved, propose associated columns
-                        return srr.source.getResultDataContext().getColumnsList().stream()
-                            .filter(c -> c.symbol.getName().toLowerCase().contains(tail))
-                            .map(c -> SQLQueryCompletionItem.forSubsetColumn(c, srr, false))
-                            .toList();
+            private List<SQLQueryCompletionItem> accomplishColumnReference(
+                @NotNull DBRProgressMonitor monitor,
+                @NotNull List<SQLQueryWordEntry> prefix,
+                @Nullable SQLQueryWordEntry tail
+            ) {
+                if (prefix.size() > 0) { // table-ref-prefixed column
+                    List<Predicate<SourceResolutionResult>> sourcePredicates = new ArrayList<>(5);
+
+                    List<String> tableName = prefix.stream().map(w -> w.string).toList();
+                    SourceResolutionResult referencedSource = this.getDataContext().resolveSource(monitor, tableName);
+                    if (referencedSource != null) {
+                        sourcePredicates.add(srr -> srr.source == referencedSource.source);
                     }
+
+                    if (prefix.size() == 1) {
+                        SQLQueryWordEntry mayBeAliasName = prefix.get(0);
+                        sourcePredicates.add(srr -> srr.aliasOrNull != null && srr.aliasOrNull.getName().toLowerCase().contains(mayBeAliasName.filterString));
+                    }
+
+                    sourcePredicates.add(srr -> {
+                        if (srr.tableOrNull != null) {
+                            List<String> parts = SQLQueryCompletionItem.prepareQualifiedNameParts(srr.tableOrNull);
+                            int partsMatched = 0;
+                            for (int i = prefix.size() - 1, j = parts.size() - 1; i >= 0 && j >= 0; i--, j--) {
+                                if (parts.get(j).toLowerCase().contains(prefix.get(i).filterString)) {
+                                    partsMatched++;
+                                }
+                            }
+                            return partsMatched == prefix.size();
+                        } else {
+                            return false;
+                        }
+                    });
+
+
+                    List<SourceResolutionResult> srr2 = this.knownSources.getResolutionResults().values().stream()
+                        .filter(rr -> sourcePredicates.stream().anyMatch(p -> p.test(rr))).toList();
+
+                    List< SQLQueryCompletionItem> cols = srr2.stream().flatMap(srr -> srr.source.getResultDataContext().getColumnsList().stream()
+                        .map(c -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(tail, c.symbol.getName()), c, srr, false))
+                    ).toList();
+
+                    List<SQLQueryCompletionItem> items = cols.stream().filter(c -> tail == null || c.getFilterInfo().filterString.contains(tail.filterString))
+                        .toList();
+
+                    return items;
+
+//                    return this.knownSources.getResolutionResults().values().stream()
+//                        .filter(rr -> sourcePredicates.stream().anyMatch(p -> p.test(rr)))
+//                        .flatMap(srr -> srr.source.getResultDataContext().getColumnsList().stream()
+//                            .map(c -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(tail, c.symbol.getName()), c, srr, false))
+//                            .filter(c -> tail == null || c.getFilterInfo().filterString.contains(tail.filterString))
+//                        ).toList();
                 } else if (prefix.size() == 0) { // table-ref not introduced yet or non-prefixed column, so try both cases
                     return this.prepareColumnCompletions(tail);
                 }
@@ -337,19 +447,21 @@ public abstract class SQLQueryCompletionContext {
             private List<SQLQueryCompletionItem> prepareObjectComponentCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObject object,
-                @NotNull String componentNamePart,
-                Class<?> componentType
+                @NotNull SQLQueryWordEntry componentNamePart,
+                @NotNull List<Class<? extends DBSObject>> componentTypes
             ) {
-                return prepareObjectComponentCompletions(monitor, object, componentNamePart, componentType,
-                    SQLQueryCompletionItem::forDbObject);
+                return prepareObjectComponentCompletions(
+                    monitor, object, componentNamePart, componentTypes, SQLQueryCompletionItem::forDbObject
+                );
             }
+
             @NotNull
-            private List<SQLQueryCompletionItem> prepareObjectComponentCompletions(
+            private <T extends DBSObject> List<SQLQueryCompletionItem> prepareObjectComponentCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObject object,
-                @NotNull String componentNamePart,
-                Class<?> componentType,
-                Function<DBSObject, SQLQueryCompletionItem> queryCompletionItemProvider
+                @Nullable SQLQueryWordEntry componentNamePart,
+                @NotNull List<Class<? extends T>> componentTypes,
+                BiFunction<SQLQueryWordEntry, T, SQLQueryCompletionItem> queryCompletionItemProvider
             ) {
                 try {
                     Stream<? extends DBSObject> components;
@@ -366,23 +478,25 @@ public abstract class SQLQueryCompletionContext {
                         components = Stream.empty();
                     }
 
-                    return components.filter(a -> (componentType == null || componentType.isInstance(a))
-                            && a.getName().toLowerCase().contains(componentNamePart))
-                        .map(queryCompletionItemProvider)
+                    return components.filter(a -> componentTypes.stream().anyMatch(t -> t.isInstance(a)))
+                            .map(o -> Pair.of(makeFilterInfo(componentNamePart, o.getName()), o))
+                            .filter(p -> componentNamePart == null || p.getFirst().filterString.contains(componentNamePart.filterString))
+                        .map(p -> queryCompletionItemProvider.apply(p.getFirst(), (T) p.getSecond()))
                         .toList();
                 } catch (DBException ex) {
+                    log.error(ex);
                     return Collections.emptyList();
                 }
             }
 
-            private List<String> obtainIdentifierParts(int position) {
-                List<String> parts = new ArrayList<>(nameNodes.length);
+            private List<SQLQueryWordEntry> obtainIdentifierParts(int position) {
+                List<SQLQueryWordEntry> parts = new ArrayList<>(nameNodes.length);
                 int i = 0;
                 for (; i < nameNodes.length; i++) {
                     STMTreeTermNode term = nameNodes[i];
                     if (term.symbol.getType() != SQLStandardLexer.Period) {
                         if (term.getRealInterval().b + 1 < position) {
-                            parts.add(term.getTextContent().toLowerCase());
+                            parts.add(new SQLQueryWordEntry(term.getRealInterval().a, term.getTextContent()));
                         } else {
                             break;
                         }
@@ -390,9 +504,9 @@ public abstract class SQLQueryCompletionContext {
                 }
                 STMTreeTermNode currentNode = i >= nameNodes.length ? null : nameNodes[i];
                 String currentPart = currentNode == null
-                    ? ""
+                    ? null
                     : currentNode.getTextContent().substring(0, position - currentNode.getRealInterval().a);
-                parts.add(currentPart.toLowerCase());
+                parts.add(currentPart == null ? null : new SQLQueryWordEntry(currentNode.getRealInterval().a, currentPart));
                 return parts;
             }
 
@@ -421,26 +535,26 @@ public abstract class SQLQueryCompletionContext {
                     SQLQuerySymbolEntry catalogName = qname.scopeName.size() <= 1 ? null : qname.scopeName.get(qname.scopeName.size() - 2);
 
                     if ((nameRange = qname.entityName.getSyntaxNode().getRealInterval()).properlyContains(pos)) {
-                        String part = qname.entityName.getRawName().substring(0, position - nameRange.a);
+                        SQLQueryWordEntry part = new SQLQueryWordEntry(qname.entityName.getInterval().a, qname.entityName.getRawName().substring(0, position - nameRange.a));
                         if (schemaName != null) {
                             SQLQuerySymbolDefinition scopeDef = this.unrollSymbolDefinition(schemaName.getDefinition());
                             if (scopeDef instanceof SQLQuerySymbolByDbObjectDefinition byObjDef) {
-                                return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, DBSEntity.class);
+                                return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, List.of(DBSEntity.class));
                             } else {
                                 // schema was not resolved, so cannot accomplish its subitems
                                 return Collections.emptyList();
                             }
                         } else {
-                            return this.prepareIdentifierCompletions(monitor, request, List.of(part), DBSEntity.class);
+                            return this.prepareInspectedIdentifierCompletions(monitor, request, List.of(part));
                         }
                     } else if (schemaName != null
                         && (schemaRange = schemaName.getSyntaxNode().getRealInterval()).properlyContains(pos)
                     ) {
-                        String part = schemaName.getRawName().substring(0, position - schemaRange.a);
+                        SQLQueryWordEntry part = new SQLQueryWordEntry(schemaName.getInterval().a, schemaName.getRawName().substring(0, position - schemaRange.a));
                         if (catalogName != null) {
                             SQLQuerySymbolDefinition scopeDef = this.unrollSymbolDefinition(schemaName.getDefinition());
                             if (scopeDef instanceof SQLQuerySymbolByDbObjectDefinition byObjDef) {
-                                return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, DBSSchema.class);
+                                return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, List.of(DBSSchema.class));
                             } else {
                                 // catalog was not resolved, so cannot accomplish schema
                                 return Collections.emptyList();
@@ -450,51 +564,52 @@ public abstract class SQLQueryCompletionContext {
                                 monitor,
                                 dbcExecutionContext.getDataSource(),
                                 part,
-                                DBSSchema.class
+                                List.of(DBSSchema.class)
                             );
                         }
                     } else if (catalogName != null
                         && (catalogRange = catalogName.getSyntaxNode().getRealInterval()).properlyContains(pos)
                     ) {
-                        String part = catalogName.getRawName().substring(0, position - catalogRange.a);
-                        return this.prepareObjectComponentCompletions(monitor, dbcExecutionContext.getDataSource(), part, DBSCatalog.class);
+                        SQLQueryWordEntry part = new SQLQueryWordEntry(catalogName.getInterval().a, catalogName.getRawName().substring(0, position - catalogRange.a));
+                        return this.prepareObjectComponentCompletions(monitor, dbcExecutionContext.getDataSource(), part, List.of(DBSCatalog.class));
                     } else {
                         throw new UnsupportedOperationException("Illegal SQLQueryQualifiedName");
                     }
                 } else if (lexicalItem instanceof SQLQuerySymbolEntry entry) {
                     Interval nameRange = entry.getSyntaxNode().getRealInterval();
-                    String part = entry.getRawName().substring(0, position - nameRange.a);
-                    return this.prepareIdentifierCompletions(monitor, request, List.of(part), null);
+                    SQLQueryWordEntry part = new SQLQueryWordEntry(entry.getInterval().a, entry.getRawName().substring(0, position - nameRange.a));
+                    return this.prepareInspectedIdentifierCompletions(monitor, request, List.of(part));
                 } else {
                     throw new UnsupportedOperationException("Unexpected lexical item kind to complete " + lexicalItem.getClass().getName());
                 }
             }
             
-            private List<SQLQueryCompletionItem> prepareKeywordCompletions(Set<String> keywords, String filter) {
-                Stream<String> stream = keywords.stream();
+            private List<SQLQueryCompletionItem> prepareKeywordCompletions(@NotNull Set<String> keywords, @Nullable SQLQueryWordEntry filter) {
+                Stream<SQLQueryCompletionItem> stream = keywords.stream().map(
+                    s -> SQLQueryCompletionItem.forReservedWord(makeFilterInfo(filter, s), s)
+                );
                 if (filter != null) {
-                    stream = stream.filter(s -> s.toLowerCase().contains(filter));
+                    stream = stream.filter(s -> s.getFilterInfo().filterString.contains(filter.filterString));
                 }
-                return stream.map(SQLQueryCompletionItem::forReservedWord).toList();
+                return stream.toList();
             }
 
             @NotNull
-            private List<SQLQueryCompletionItem> prepareColumnCompletions(@Nullable String filterOrNull) {
+            private List<SQLQueryCompletionItem> prepareColumnCompletions(@Nullable SQLQueryWordEntry filterOrNull) {
                 // directly available column
-                List<SQLQueryCompletionItem> subsetColumns = context.getColumnsList().stream()
-                    .filter(c -> filterOrNull == null || c.symbol.getName().toLowerCase().contains(filterOrNull))
-                    .map(rc -> SQLQueryCompletionItem.forSubsetColumn(rc, this.knownSources.getResolutionResults().get(rc.source), true))
-                    .toList();
+                List<SQLQueryCompletionItem> subsetColumns = prepareCurrentTupleColumns(filterOrNull);
                 // already referenced tables
                 LinkedList<SQLQueryCompletionItem> tableRefs = new LinkedList<>();
                 for (SourceResolutionResult rr : this.knownSources.getResolutionResults().values()) {
                     if (rr.aliasOrNull != null && !rr.isCteSubquery) {
-                        if (filterOrNull == null || rr.aliasOrNull.getName().toLowerCase().contains(filterOrNull)) {
-                            tableRefs.add(SQLQueryCompletionItem.forSubqueryAlias(rr.aliasOrNull, rr.source));
+                        SQLQueryWordEntry sourceAlias = makeFilterInfo(filterOrNull,  rr.aliasOrNull.getName());
+                        if (filterOrNull == null || sourceAlias.filterString.contains(filterOrNull.filterString)) {
+                            tableRefs.add(SQLQueryCompletionItem.forRowsSourceAlias(sourceAlias, rr.aliasOrNull, rr));
                         }
                     } else if (rr.tableOrNull != null) {
-                        if (filterOrNull == null || rr.tableOrNull.getName().toLowerCase().contains(filterOrNull)) {
-                            tableRefs.add(SQLQueryCompletionItem.forRealTable(rr.tableOrNull, true));
+                        SQLQueryWordEntry tableName = makeFilterInfo(filterOrNull, rr.tableOrNull.getName());
+                        if (filterOrNull == null || tableName.filterString.contains(filterOrNull.filterString)) {
+                            tableRefs.add(SQLQueryCompletionItem.forRealTable(tableName, rr.tableOrNull, true));
                         }
                     }
                 }
@@ -502,14 +617,36 @@ public abstract class SQLQueryCompletionContext {
             }
 
             @NotNull
+            @Override
+            public List<SQLQueryCompletionItem> prepareCurrentTupleColumns() {
+                return this.prepareCurrentTupleColumns(null);
+            }
+
+            @NotNull
+            private List<SQLQueryCompletionItem> prepareCurrentTupleColumns(@Nullable SQLQueryWordEntry filterOrNull) {
+                Stream<SQLQueryCompletionItem> subsetColumns = context.getColumnsList().stream()
+                    .map(rc -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(filterOrNull, rc.symbol.getName()), rc, this.knownSources.getResolutionResults().get(rc.source), true));
+
+                if (filterOrNull != null) {
+                    subsetColumns = subsetColumns.filter(c -> c.getFilterInfo().filterString.contains(filterOrNull.filterString));
+                }
+
+                return subsetColumns.toList();
+            }
+
+            @NotNull
             private List<SQLQueryCompletionItem> prepareTableCompletions(
                 @NotNull DBRProgressMonitor monitor,
-                @NotNull SQLCompletionRequest request
+                @NotNull SQLCompletionRequest request,
+                @Nullable SQLQueryWordEntry filterOrNull
             ) {
                 LinkedList<SQLQueryCompletionItem> completions = new LinkedList<>();
                 for (SourceResolutionResult rr : this.knownSources.getResolutionResults().values()) {
                     if (rr.aliasOrNull != null && rr.isCteSubquery) {
-                        completions.add(SQLQueryCompletionItem.forSubqueryAlias(rr.aliasOrNull, rr.source));
+                        SQLQueryWordEntry aliasName = makeFilterInfo(filterOrNull, rr.aliasOrNull.getName());
+                        if (filterOrNull == null || aliasName.filterString.contains(filterOrNull.filterString)) {
+                            completions.add(SQLQueryCompletionItem.forRowsSourceAlias(aliasName, rr.aliasOrNull, rr));
+                        }
                     }
                 }
 
@@ -520,17 +657,17 @@ public abstract class SQLQueryCompletionContext {
                             DBSSchema defaultSchema = defaults.getDefaultSchema();
                             DBSCatalog defaultCatalog = defaults.getDefaultCatalog();
                             if (defaultCatalog == null && defaultSchema == null && dbcExecutionContext.getDataSource() instanceof DBSObjectContainer container) {
-                                this.collectTables(monitor, container, completions);
+                                this.collectTables(monitor, container, filterOrNull, completions);
                             } else if (request.getContext().isSearchGlobally() && defaultCatalog != null) {
-                                this.collectTables(monitor, defaultCatalog, completions);
+                                this.collectTables(monitor, defaultCatalog, filterOrNull, completions);
                             } else {
                                 if (defaultSchema != null) {
-                                    this.collectTables(monitor, defaultSchema, completions);
+                                    this.collectTables(monitor, defaultSchema, filterOrNull, completions);
                                 }
                             }
                         }
 
-                        this.collectContextSchemasAndCatalogs(monitor, completions);
+                        this.collectContextSchemasAndCatalogs(this.exposedContexts, monitor, filterOrNull, completions);
                     } catch (DBException e) {
                         log.error(e);
                     }
@@ -539,12 +676,20 @@ public abstract class SQLQueryCompletionContext {
                 return completions;
             }
 
-            private void collectContextSchemasAndCatalogs(@NotNull DBRProgressMonitor monitor, @NotNull LinkedList<SQLQueryCompletionItem> completions) throws DBException {
-                for (DBSObjectContainer container : this.exposedContexts) {
+            private void collectContextSchemasAndCatalogs(
+                @NotNull Collection<DBSObjectContainer> contexts,
+                @NotNull DBRProgressMonitor monitor,
+                @Nullable SQLQueryWordEntry filterOrNull,
+                @NotNull LinkedList<SQLQueryCompletionItem> completions
+            ) throws DBException {
+                for (DBSObjectContainer container : contexts) {
                     Collection<? extends DBSObject> children = container.getChildren(monitor);
                     for (DBSObject child : children) {
                         if (child instanceof DBSSchema || child instanceof DBSCatalog) {
-                            completions.addLast(SQLQueryCompletionItem.forDbObject(child));
+                            SQLQueryWordEntry childName = makeFilterInfo(filterOrNull, child.getName());
+                            if (filterOrNull == null || childName.filterString.contains(filterOrNull.filterString)) {
+                                completions.addLast(SQLQueryCompletionItem.forDbObject(childName, child));
+                            }
                         }
                     }
                 }
@@ -553,22 +698,24 @@ public abstract class SQLQueryCompletionContext {
             private void collectTables(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObjectContainer container,
+                @Nullable SQLQueryWordEntry filterOrNull,
                 @NotNull LinkedList<SQLQueryCompletionItem> accumulator
             ) throws DBException {
                 this.collectObjectsRecursively(
-                    monitor, container, new HashSet<>(), accumulator,
+                    monitor, container, new HashSet<>(), accumulator, filterOrNull,
                     List.of(DBSTable.class, DBSView.class),
-                    o -> SQLQueryCompletionItem.forRealTable(o, knownSources.getReferencedTables().contains(o))
+                    (e, o) -> SQLQueryCompletionItem.forRealTable(e, o, knownSources.getReferencedTables().contains(o))
                 );
             }
 
             private void collectSchemas(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObjectContainer container,
-                @NotNull LinkedList<SQLQueryCompletionItem> accumulator
+                @NotNull LinkedList<SQLQueryCompletionItem> accumulator,
+                @Nullable SQLQueryWordEntry filterOrNull
             ) throws DBException {
                 this.collectObjectsRecursively(
-                    monitor, container, new HashSet<>(), accumulator,
+                    monitor, container, new HashSet<>(), accumulator, filterOrNull,
                     List.of(DBSSchema.class), SQLQueryCompletionItem::forDbObject
                 );
             }
@@ -576,10 +723,11 @@ public abstract class SQLQueryCompletionContext {
             private void collectCatalogs(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObjectContainer container,
-                @NotNull LinkedList<SQLQueryCompletionItem> accumulator
+                @NotNull LinkedList<SQLQueryCompletionItem> accumulator,
+                @Nullable SQLQueryWordEntry filterOrNull
             ) throws DBException {
                 this.collectObjectsRecursively(
-                    monitor, container, new HashSet<>(), accumulator,
+                    monitor, container, new HashSet<>(), accumulator, filterOrNull,
                     List.of(DBSCatalog.class), SQLQueryCompletionItem::forDbObject
                 );
             }
@@ -590,18 +738,20 @@ public abstract class SQLQueryCompletionContext {
                 @NotNull DBSObjectContainer container,
                 @NotNull Set<DBSObject> alreadyReferencedObjects,
                 @NotNull LinkedList<SQLQueryCompletionItem> accumulator,
+                @Nullable SQLQueryWordEntry filterOrNull,
                 @NotNull List<Class<? extends T>> types,
-                @NotNull Function<T, SQLQueryCompletionItem> completionItemFabric
+                @NotNull BiFunction<SQLQueryWordEntry, T, SQLQueryCompletionItem> completionItemFabric
             ) throws DBException {
                 Collection<? extends DBSObject> children = container.getChildren(monitor);
                 for (DBSObject child : children) {
                     if (!DBUtils.isHiddenObject(child)) {
                         if (types.stream().anyMatch(t -> t.isInstance(child))) {
-                            if (alreadyReferencedObjects.add(child)) {
-                                accumulator.add(completionItemFabric.apply((T) child));
+                            SQLQueryWordEntry childName = makeFilterInfo(filterOrNull, child.getName());
+                            if (alreadyReferencedObjects.add(child) && (filterOrNull == null || childName.filterString.contains(filterOrNull.filterString))) {
+                                accumulator.add(completionItemFabric.apply(childName, (T) child));
                             }
                         } else if (child instanceof DBSObjectContainer sc && DBStructUtils.isConnectedContainer(child)) {
-                            collectObjectsRecursively(monitor, sc, alreadyReferencedObjects, accumulator, types, completionItemFabric);
+                            collectObjectsRecursively(monitor, sc, alreadyReferencedObjects, accumulator, filterOrNull, types, completionItemFabric);
                         }
                     }
                 }
